@@ -83,6 +83,7 @@ class Surface: public Drawable {
     void clear(const Rectangle& where);
     void fill_with_color(const Color& color);
     void fill_with_color(const Color& color, const Rectangle& where);
+    uint8_t get_opacity() const;
     void set_opacity(uint8_t opacity);
 
     std::string get_pixels() const;
@@ -152,17 +153,18 @@ class Surface: public Drawable {
     std::vector<SubSurfaceNodePtr>
         subsurfaces;                      /**< Source Subsurfaces not in the tree yet */
 
-    bool software_destination;            /**< indicates that this surface is modified on software side
+    bool software_destination;            /**< Whether this surface should be modified on software side
                                            * (and therefore immediately) when used as a destination */
     SDL_Surface_UniquePtr
-        internal_surface;                 /**< the SDL_Surface encapsulated, if any. */
+        internal_surface;                 /**< The SDL_Surface encapsulated, if any. */
     SDL_Texture_UniquePtr
-        internal_texture;                 /**< the SDL_Texture encapsulated, if any. */
+        internal_texture;                 /**< The SDL_Texture encapsulated, if any. */
     std::unique_ptr<Color>
-        internal_color;                   /**< the background color to use, if any. */
-    bool is_rendered;                     /**< indicates if the current surface has been rendered. Set to false when drawing a surface on this one. */
-    uint8_t internal_opacity;             /**< opacity to apply to all subtextures. */
-    int width, height;                    /**< size of the texture, avoid to use SDL_QueryTexture. */
+        internal_color;                   /**< The background color to use, if any. */
+    bool is_rendered;                     /**< Whether the current surface has been rendered.
+                                           * Set to false when drawing a surface on this one. */
+    uint8_t opacity;                      /**< Opacity (0: transparent, 255: opaque). */
+    int width, height;                    /**< Size of the texture, avoid to use SDL_QueryTexture. */
 
 };
 
